Don't crash if user has "contact" in contact list with the same jid as group chat. TODO: We should remove the invalid user with JT_Roster task (wait for ack) and then join the group chat.

BUG: 204243


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1066641